feat(index): 解决cors跨域

--- a/check_server.html
+++ b/check_server.html
@@ -31,7 +31,7 @@
                 })
             })
             fn_login.addEventListener('click', () => {
-                axios.post('http://127.0.0.1:3000/fn_login', {
+                axios.post('http://127.0.0.1:3000/login', {
                     username: 'yyy',
                     password: '000000'
                 }).then(res => {
