--- a/check_server.html
+++ b/check_server.html
@@ -7,12 +7,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/5.0.2/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        .box {
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: flex-start;
+        }
+        .btn {
+            width: 100%;
+            margin: 4px 0;
+        }
+    </style>
 </head>
 
 <body>
+    <div class="box">
+        <button type="button" id="fn_add" class="btn btn-primary btn-lg btn-block">新建用户</button>
+        <button type="button" id="fn_login" class="btn btn-primary btn-lg btn-block">登录</button>
+    </div>
 
-    <button type="button" id="fn_add" class="btn btn-primary btn-lg">新建用户</button>
-    <button type="button" id="fn_login" class="btn btn-primary btn-lg">登录</button>
 
     <script src="https://cdn.bootcdn.net/ajax/libs/axios/0.21.1/axios.min.js"></script>
     <script src="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/5.0.2/js/bootstrap.min.js"></script>
